--- a/css/footer.css
+++ b/css/footer.css
@@ -27,6 +27,7 @@
 .footer .footer-area {
   min-height: 400px;
   max-width: 100%;
+  margin-top: 2rem;
   display: grid;
   grid-template-columns: 1fr 3fr;
   grid-template-rows: 70% 30%;
