--- a/css/footer.scss
+++ b/css/footer.scss
@@ -46,9 +46,11 @@ $colorBlack: black;
   background-color: black;
 
 
+
   .footer-area{
     min-height:400px;
     max-width: 100%;
+    margin-top: 2rem;
     // margin: 0 auto;
     display: grid;
     grid-template-columns: 1fr 3fr;
