--- a/css/header.scss
+++ b/css/header.scss
@@ -3,6 +3,7 @@ $colorBlack: black;
 .header-section{
   max-width: 3000px;
   width: 100%;
+
   // opacity: 0.2;
   // z-index: -1;
 }
@@ -11,7 +12,7 @@ $colorBlack: black;
 
 .navbar{
   display: flex;
-  justify-content: center;
+  justify-content:center;
   align-items: center;
   background-color: white;
   min-height: 80px;
@@ -22,7 +23,7 @@ $colorBlack: black;
     .container{
       margin: 0 auto;
       padding:0 10px;
-      min-width: 60%;
+      // min-width: 60%;
       max-width: 90%;
       z-index: 1000;
     }
