start add responsive

--- a/css/header.css
+++ b/css/header.css
@@ -18,7 +18,8 @@
 .navbar .container {
   margin: 0 auto;
   padding: 0 10px;
-  max-width: 90%;
+  min-width: 80%;
+  max-width: 80%;
   z-index: 1000;
 }
 
@@ -100,6 +101,21 @@
   transition: 0.7s all ease;
 }
 
+.barLink .barLinkListItem img {
+  border: none;
+  padding: 0;
+  margin: 0;
+  display: inline-block;
+  max-width: 15%;
+  height: auto;
+  image-rendering: optimizeQuality;
+}
+
+.barLink .barLinkListItem img:hover {
+  transition: 0.7s all ease;
+  opacity: 0.8;
+}
+
 .navDropdownListItem {
   position: relative;
   height: 100%;
@@ -132,7 +148,7 @@
   padding: 0;
   margin: 0;
   display: inline-block;
-  max-width: 15%;
+  width: 1rem;
   height: auto;
   image-rendering: optimizeQuality;
 }
