--- a/css/header.scss
+++ b/css/header.scss
@@ -23,8 +23,8 @@ $colorBlack: black;
     .container{
       margin: 0 auto;
       padding:0 10px;
-      // min-width: 60%;
-      max-width: 90%;
+      min-width: 80%;
+      max-width: 80%;
       z-index: 1000;
     }
 
@@ -102,8 +102,22 @@ $colorBlack: black;
          &:hover{
           color: grey;
           transition: 0.7s all ease;
-  
          }
+      }
+
+      img{
+        border: none;
+        padding: 0;
+        margin: 0;
+        display: inline-block;
+        max-width: 15%;
+        height: auto;
+        image-rendering: optimizeQuality;
+
+        &:hover{
+          transition: 0.7s all ease;
+          opacity: 0.8;
+        }
       }
     }
 
@@ -139,7 +153,7 @@ $colorBlack: black;
       padding: 0;
       margin: 0;
       display: inline-block;
-      max-width: 15%;
+      width:1rem;
       height: auto;
       image-rendering: optimizeQuality;
     }
@@ -162,7 +176,6 @@ $colorBlack: black;
 
     &:hover{
         text-decoration: none !important;
-
     }
 
     & a {
