--- a/css/contactForm.css
+++ b/css/contactForm.css
@@ -203,3 +203,33 @@
   animation-timing-function: linear;
   animation-iteration-count: infinite;
 }
+
+@media screen and (max-width: 1057px) {
+  .formContainer .up-section {
+    min-height: 700px;
+  }
+  .formContainer .down-section {
+    min-height: 700px;
+  }
+  .formContainer .form-to-contact {
+    grid-template-rows: 10% 0.8fr 1fr !important;
+  }
+  .formContainer .form-to-contact .left-section {
+    grid-column: 1/3 !important;
+    grid-row: 2/3 !important;
+    margin: 0 0.5rem !important;
+    width: 90% !important;
+  }
+  .formContainer .form-to-contact .left-section h1 {
+    text-align: center;
+  }
+  .formContainer .form-to-contact .left-section .contact-list li span {
+    font-size: 1.3rem;
+  }
+  .formContainer .form-to-contact .right-section {
+    grid-column: 1/3 !important;
+    grid-row: 3/4 !important;
+    margin: 0 2rem !important;
+    width: 100% !important;
+  }
+}
