--- a/css/contactForm.scss
+++ b/css/contactForm.scss
@@ -242,3 +242,46 @@
  }
 
 }
+
+@media screen and (max-width: 1057px) {
+
+  .formContainer{
+    
+    .up-section{
+      min-height: 700px ;
+    }
+
+    .down-section{
+      min-height: 700px;
+    }
+
+
+    .form-to-contact{
+      grid-template-rows: 10% 0.8fr 1fr !important;
+  
+      .left-section{
+        grid-column: 1/3 !important;
+        grid-row: 2/3 !important;
+        margin: 0 0.5rem !important; 
+        width: 90% !important;
+  
+        h1{
+          text-align: center;
+        }
+
+        .contact-list li span{
+          font-size: 1.3rem;
+        }
+      }
+  
+      .right-section{
+        grid-column: 1/3 !important;
+        grid-row: 3/4 !important;
+        margin: 0 2rem !important; 
+        width: 100% !important;
+      }
+    }
+
+  }
+
+}
