--- a/css/footer.scss
+++ b/css/footer.scss
@@ -53,8 +53,8 @@ $colorBlack: black;
     margin-top: 2rem;
     // margin: 0 auto;
     display: grid;
-    grid-template-columns: 1fr 3fr;
-    grid-template-rows: 70% 30%;
+    grid-template-columns: 1fr 2fr 1fr;
+    grid-template-rows: 1fr 1fr;
 
 
     .logo-layer{
@@ -93,13 +93,16 @@ $colorBlack: black;
     }
 
     .abn{
-    grid-column: 1/3;
+    grid-column: 2/3;
     grid-row: 2;
+    flex-direction: column;
+    display: flex;
+    justify-content:flex-end;
+    align-items: center;
       p{
         font-weight: 200;
-        font-size:20px;
+        font-size:1rem;
         color:var(--secondary-color);
-        text-align: center;
         // line-height: 20px;
         
       }
@@ -112,5 +115,85 @@ $colorBlack: black;
         margin: 0 auto;
       }
     }
+
+    .callUs{
+      grid-column: 3/4;
+      grid-row: 1/3;
+      border-radius: 10px;
+      border: none;
+      font-weight: 200;
+      color: var(--primary-color);
+      font-size: 1.5rem;
+      padding: 20px 20px;
+      text-transform: uppercase;
+      background-color: var(--secondary-color);
+      margin: 9rem 5rem;
+      cursor: pointer;
+    }
   }
+}
+
+
+@media screen and (max-width: 1057px) {
+      .footer-area{
+        min-height: 100px !important;
+
+        .footerBar a span{
+          font-size: 1rem !important;
+        }
+
+        .abn p{
+          font-size: 0.7rem !important;
+        }
+
+        .callUs{
+          margin: auto !important;
+          width: 80%;
+          height: 20%;
+          font-size: 1rem !important;
+        }
+      }
+
+}
+
+@media screen and (max-width: 768px) {
+
+  body .footer .footer-area {
+    grid-template-rows: 1fr 1fr 1fr !important;
+ 
+    .abn{
+     grid-column: 1/4;
+     grid-row: 3;  
+     width: 75%;
+     margin: 0 auto;
+     
+     p{
+       text-align: center;
+     }
+   }
+ 
+ 
+    .footerBar{
+      grid-row: 2;
+      flex-direction: column;
+      margin: 1rem 0;
+      grid-column: 1;
+ 
+      & > :not(:nth-child(1)){
+          margin-top: 0.5rem;
+      }
+    }
+ 
+   .logo-layer {
+     grid-column: 1/4;
+     img{
+       max-width: 80% !important;
+       margin: 2rem auto;
+     }
+   }
+ 
+ 
+ 
+  }
+  
 }
