--- a/css/style.css
+++ b/css/style.css
@@ -20,11 +20,21 @@
   }
 }
 
+html {
+  width: 100%;
+  margin: 0;
+  padding: 0;
+}
+
 body {
-  max-width: 3000px;
+  width: 100%;
   margin: 0 auto;
   padding: 0;
   font-family: barlow, sans-serif;
+}
+
+section {
+  width: 100%;
 }
 
 .mainPage {
@@ -621,4 +631,203 @@ body {
   animation-duration: 1s;
   animation-timing-function: linear;
   animation-iteration-count: infinite;
+}
+
+@media screen and (max-width: 1057px) {
+  .stepItem-list .stepItem img {
+    width: 100% !important;
+  }
+  .video-container-overlay .introduceVideoContainer {
+    height: 24rem;
+    margin-top: 14rem;
+  }
+  .video-container-overlay .video-shadow-layout {
+    grid-column: 1/6;
+    grid-row: 1/3;
+    border-radius: unset;
+    max-height: 20%;
+    margin-top: 20rem;
+  }
+  .video-container-overlay .text-layout {
+    grid-column: 1/6 !important;
+    flex-direction: row !important;
+    justify-content: center !important;
+    align-items: center !important;
+    margin-top: 10rem;
+  }
+  .video-container-overlay .talk-to-us {
+    display: none;
+  }
+  .tableSorter {
+    grid-template-columns: 100% !important;
+    grid-template-rows: 1fr 2fr 1fr 2fr !important;
+  }
+  .tableSorter .grid-item-1 {
+    grid-column: 1;
+    grid-row: 1;
+    border-top-left-radius: 0px !important;
+    border-top-right-radius: 2rem;
+  }
+  .tableSorter .grid-item-2 {
+    grid-column: 1 !important;
+    grid-row: 3 !important;
+    margin-top: 2rem;
+  }
+  .tableSorter .grid-item-3 {
+    grid-column: 1 !important;
+    grid-row: 2 !important;
+  }
+  .tableSorter .grid-item-4 {
+    grid-column: 1 !important;
+    grid-row: 4 !important;
+  }
+  .Apply {
+    left: 38% !important;
+  }
+  .travelIntroduction {
+    margin: 0 1rem !important;
+  }
+  .travelIntroStatics-section .statics-container {
+    max-width: 90% !important;
+  }
+  .travelIntroStatics-section .statics-container .statics {
+    margin: 0 1rem;
+  }
+  .findButton {
+    left: 30% !important;
+  }
+  .whyTravel {
+    min-height: 1100px;
+  }
+  .travelReason iframe {
+    height: 20rem !important;
+    width: 100%;
+  }
+  .service-section .InfoButton {
+    left: 30%;
+  }
+  .expert .expertContainer .expert-content {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .expert .expertContainer p {
+    font-size: 3rem;
+    margin: 1rem 0;
+  }
+  .expert .expertContainer .contactDetail .talkToUs {
+    margin-top: 1rem !important;
+  }
+  .steps-to-find {
+    min-height: 550px;
+  }
+  .steps-to-find .step-container .stepItem .item-description {
+    width: 7rem;
+    height: 3rem;
+    font-size: 1.5rem;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .text-editor p {
+    font-size: 1.5rem;
+  }
+  .ticket-table .tableSorter .spanStyle {
+    font-size: 1.6rem;
+  }
+  .ticket-table .tableSorter .spanStyle-body {
+    font-size: 1rem;
+  }
+  .Apply {
+    position: unset !important;
+    margin: 2rem 5rem;
+    font-size: 1.4rem;
+  }
+  body .video-container-overlay {
+    height: 35rem;
+  }
+  body .video-container-overlay .introduceVideoContainer {
+    margin-top: 6rem;
+  }
+  body .video-container-overlay .video-shadow-layout {
+    margin-top: 16rem;
+  }
+  body .video-container-overlay .text-layout blockquote {
+    margin: auto;
+  }
+  body .video-container-overlay .text-layout blockquote div {
+    font-size: 1rem;
+    line-height: 2rem;
+  }
+  .backgroundCover .elementor-container .travelName {
+    font-size: 2rem;
+  }
+  .backgroundCover .travelIntroStatics-section .statics-container {
+    width: 80%;
+    flex-direction: column;
+    margin: 0 auto;
+  }
+  .backgroundCover .travelIntroStatics-section .statics-container > :not(:nth-child(1)) {
+    margin-top: 2rem;
+  }
+  .backgroundCover .findButton {
+    position: unset;
+    margin: 6rem 2rem;
+    font-size: 1.2rem;
+  }
+  .service-section .InfoButton {
+    position: unset;
+    margin: 6rem 2rem;
+  }
+  .service-section .serviceBar {
+    justify-content: center;
+    margin: auto;
+  }
+  .steps-to-find .step-container .steps-title {
+    font-size: 1.8rem;
+  }
+  .steps-to-find .step-container .stepItem-list {
+    flex-direction: column;
+  }
+  .steps-to-find .step-container .stepItem-list > :not(:nth-child(1)) {
+    margin-top: 3rem;
+  }
+  .steps-to-find .step-container .stepItem .item-description {
+    margin: 0;
+  }
+  .expert .expertContainer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .expert .expertContainer .expert-content {
+    margin: 1rem auto 3rem auto;
+  }
+  .expert .expertContainer .expert-content p {
+    font-size: 1.8rem;
+  }
+  .expert .expertContainer .expert-content .contactDetail .talkToUs {
+    padding: 1rem 2rem;
+    font-size: 1.2rem;
+  }
+  .expert .expertContainer .expert-content .contactDetail .bi {
+    height: 20px;
+    width: 20px;
+  }
+  .expert .expertContainer .expert-content .contactDetail span {
+    font-size: 1.2rem;
+  }
+  .contactForm .formContainer .form-to-contact {
+    width: 100%;
+  }
+  .contactForm .formContainer .form-to-contact .right-section {
+    width: 90% !important;
+  }
+  .contactForm .formContainer .form-to-contact .right-section .contactForm li .text-input {
+    width: 90%;
+  }
+  .contactForm .formContainer .form-to-contact .right-section button {
+    font-size: 1.2rem !important;
+    font-weight: 200 !important;
+  }
 }
