--- a/css/style.scss
+++ b/css/style.scss
@@ -40,11 +40,21 @@ $colorBlack: black;
   }
 }
 
+html{
+  width: 100%;
+  margin: 0;
+  padding: 0;
+}
+
 body {
-  max-width: 3000px;
+  width: 100%;
   margin: 0 auto;
   padding: 0;
   font-family: barlow, sans-serif;
+}
+
+section{
+  width: 100%;
 }
 
 .mainPage{
@@ -644,6 +654,307 @@ body {
   }
 }
 
+@media screen and (max-width: 1057px) {
+  .stepItem-list{
+    .stepItem{
+      & img{
+         width: 100% !important;
+      }
+   }
+ }
+ 
+ .video-container-overlay{
+   // grid-template-rows: repeat(4, 1fr);
+ 
+   .introduceVideoContainer{
+      height: 24rem;
+      margin-top: 14rem;
+   }
+ 
+   .video-shadow-layout{
+     grid-column: 1/6;
+     grid-row: 1/3;
+     border-radius: unset;
+     max-height: 20%;
+     margin-top: 20rem;
+   }
+ 
+   .text-layout{
+   grid-column: 1/6 !important;
+   flex-direction: row !important;
+   justify-content: center !important;
+   align-items: center !important;
+   margin-top: 10rem;
+ }
+ 
+ .talk-to-us{
+   display: none;
+ }
+ }
+ 
+ .tableSorter{
+   grid-template-columns: 100% !important;
+   grid-template-rows: 1fr 2fr 1fr 2fr !important;
+ 
+   .grid-item-1{
+     grid-column: 1;
+     grid-row: 1;
+     border-top-left-radius: 0px !important;
+     border-top-right-radius: 2rem;
+   }
+ 
+   .grid-item-2{
+     grid-column: 1 !important;
+     grid-row: 3 !important;
+     margin-top: 2rem;
+   }
+ 
+   .grid-item-3{
+     grid-column: 1 !important;
+     grid-row: 2 !important;
+    
+   }
+ 
+   .grid-item-4{
+     grid-column: 1 !important;
+     grid-row: 4 !important;
+   }
+ }
+ 
+   .Apply{
+     left:38% !important;
+   }
+ 
+ .travelIntroduction{
+   margin: 0 1rem !important;
+ }
+ 
+ .travelIntroStatics-section{
+   .statics-container{
+     max-width: 90% !important;
+     .statics{
+       margin: 0 1rem;
+     }
+   }
+ }
+ 
+ .findButton{
+   left: 30% !important;
+ }
+ 
+ .whyTravel{
+   min-height: 1100px;
+ }
+ 
+ .travelReason{
+   & iframe{
+     height: 20rem !important;
+     width: 100%;
+   }
+ 
+ }
+ 
+ .service-section .InfoButton{
+   left: 30%;
+ }
+ 
+ .expert{
+
+   .expertContainer{
+
+     .expert-content{
+       flex-direction: column;
+       justify-content: center;
+       align-items: center;
+     }
+
+     p{
+       font-size: 3rem;
+       margin: 1rem 0;
+     }
+     
+     .contactDetail .talkToUs{
+       margin-top: 1rem !important;
+     }
+  }
+ }
+
+ .steps-to-find {
+  min-height: 550px; 
+
+  .step-container .stepItem .item-description{
+    width: 7rem;
+    height: 3rem;
+    font-size: 1.5rem;
+ }
+}
+
+}
+
+
+@media screen and (max-width: 768px) {
+  .text-editor p{
+    font-size: 1.5rem;
+  }
+
+  .ticket-table .tableSorter {
+
+    .spanStyle{
+      font-size: 1.6rem; 
+     }
+
+     .spanStyle-body{
+      font-size: 1rem 
+     }
+  }
+
+  
+  .Apply{
+    position: unset !important;
+    margin: 2rem 5rem;
+    font-size: 1.4rem;
+  }
+
+
+
+  body .video-container-overlay{
+     height: 35rem;
+    
+    .introduceVideoContainer {
+      margin-top: 6rem;
+    }
+
+    .video-shadow-layout{
+      margin-top: 16rem;
+    }
+
+    .text-layout {
+
+      & blockquote{
+        margin:auto;
+        & div{
+          font-size: 1rem;
+          line-height: 2rem;
+        }
+      }
+    }
+  
+   } 
+
+
+  .backgroundCover .elementor-container{
+    .travelName{
+       font-size: 2rem;
+      
+    }
+  }
+
+
+  .backgroundCover .travelIntroStatics-section .statics-container{
+    width: 80%;
+    flex-direction: column;
+    margin: 0 auto;
+
+   & > :not(:nth-child(1)){
+        margin-top: 2rem;
+    }
+  }
+
+  .backgroundCover{
+    
+    .findButton{
+      position: unset;
+      margin: 6rem 2rem;
+      font-size: 1.2rem;
+    }
+  }
+
+  .service-section{
+    .InfoButton{
+      position: unset;
+      margin: 6rem 2rem;
+    }
+
+    .serviceBar{
+      justify-content: center;
+      margin: auto;
+    }
+  }
+
+  .steps-to-find .step-container {
+     
+    .steps-title{
+      font-size: 1.8rem;
+    }
+
+    .stepItem-list{
+      flex-direction: column;
+
+      & > :not(:nth-child(1)){
+        margin-top: 3rem;
+    }
+    }
+
+    .stepItem .item-description{
+      margin: 0;
+    }
+  }
+
+  .expert .expertContainer {
+    @include flex-centre();
+    .expert-content{
+      margin: 1rem auto 3rem auto;
+      p{
+        font-size: 1.8rem;
+      }
+ 
+      .contactDetail {
+         
+       .talkToUs{
+         padding: 1rem 2rem;
+         font-size: 1.2rem;    
+       }
+ 
+       .bi{
+         height: 20px;
+         width: 20px;
+       }
+ 
+       span{
+         font-size: 1.2rem;
+       }
+     }  
+   }
+ }
+
+ .contactForm .formContainer .form-to-contact{
+   width: 100%;
+
+   .right-section {
+      width: 90% !important;  
+
+   .contactForm li .text-input{
+      width:90%;
+   }
+
+    button{
+      font-size: 1.2rem !important;
+      font-weight: 200 !important;
+    }
+
+
+   }
+ }
+
+
+
+ 
+ 
+
+
+ 
+
+}
 
 
 
