--- a/css/travel.css
+++ b/css/travel.css
@@ -294,3 +294,112 @@ body {
   grid-row: 1/3;
   grid-column: 2/3;
 }
+
+@media screen and (max-width: 995px) {
+  body .background-section .image-container {
+    margin: 9rem auto;
+  }
+  body .news-intro {
+    flex-direction: column;
+  }
+  body .news-intro .news {
+    width: 100%;
+    margin: 1rem auto 0 auto;
+  }
+  body .news-intro .news-image-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 2rem;
+  }
+  body .news-detail {
+    margin: 7rem;
+  }
+  body .news-detail .news-list {
+    flex-direction: column;
+  }
+  body .news-detail .news-list > :not(:nth-child(1)) {
+    margin-top: 4rem;
+  }
+  body .news-detail .news-list .contactContainer {
+    width: 80%;
+  }
+  body .news-detail .news-list .contactContainer h2 {
+    line-height: 2rem;
+    font-size: 2rem;
+  }
+  body .what-can-help .step-container {
+    margin: 3.5rem auto 5rem auto;
+  }
+  body .what-can-help .step-container .stepItem-list {
+    flex-direction: column;
+  }
+  body .what-can-help .step-container .stepItem {
+    justify-content: center;
+    margin: 4rem;
+  }
+  body .what-can-help .step-container .stepItem img {
+    width: 150px;
+  }
+  body .advertisement {
+    width: 90%;
+  }
+  body .advertisement .advertisement-content {
+    grid-template-rows: 1fr 1fr;
+    column-gap: 0;
+  }
+  body .advertisement .advertisement-content .content-1 {
+    grid-row: 1/2;
+    grid-column: 1/3;
+    max-width: 100%;
+  }
+  body .advertisement .advertisement-content .content-2 {
+    grid-row: 2/3;
+    grid-column: 1/3;
+    max-width: 100%;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  body .background-section {
+    height: 20rem;
+  }
+  body .background-section .image-container {
+    margin: 9rem auto 4rem auto;
+  }
+  body .background-section .image-container h2 {
+    font-size: 1.5rem;
+  }
+  body .news-intro {
+    width: 95%;
+    margin: 1rem auto 5rem auto;
+  }
+  body .news-intro .news span {
+    font-size: 1rem;
+  }
+  body .news-intro .news h1 {
+    text-align: left;
+  }
+  body .news-intro .news-image-container img {
+    max-width: 90%;
+  }
+  body .news-detail {
+    margin: 5rem 0;
+  }
+  body .news-detail .news-list {
+    width: 95%;
+    max-width: unset;
+  }
+  body .news-detail .news-list .contactContainer {
+    width: 100%;
+  }
+  body .what-can-help .step-container {
+    width: 100%;
+  }
+  body .what-can-help .step-container .stepItem {
+    width: 90%;
+  }
+  body .advertisement h1 {
+    font-size: 1.5rem;
+  }
+}
