--- a/css/travel.scss
+++ b/css/travel.scss
@@ -328,3 +328,153 @@ body {
   }
 }
 
+@media screen and (max-width: 995px) {
+   body .background-section .image-container{
+    margin: 9rem auto;
+   }
+
+   body .news-intro{
+     flex-direction: column;
+
+      .news{
+        width: 100%;
+        margin: 1rem auto 0 auto;
+      }
+
+      .news-image-container{
+        @include flex-centre();
+        margin-top: 2rem;
+      }
+   }
+
+   body .news-detail {
+         margin: 7rem;
+
+        .news-list{
+          flex-direction: column;
+
+        & > :not(:nth-child(1)){
+            margin-top: 4rem;
+        }
+
+        .contactContainer {
+          width: 80%;
+          
+
+        h2{
+          line-height: 2rem;
+          font-size: 2rem;
+        }
+
+        }
+
+      }
+   }
+
+
+   body .what-can-help .step-container {
+       margin: 3.5rem auto 5rem auto;
+      .stepItem-list{
+        flex-direction: column;
+      }
+
+      .stepItem {
+          justify-content: center;
+          margin: 4rem;
+
+        img{
+          width: 150px;
+        }
+
+      }
+   }
+
+   body .advertisement {
+     width: 90%;
+    .advertisement-content{
+      grid-template-rows: 1fr 1fr;
+      column-gap: 0;
+       
+       .content-1{
+         grid-row: 1/2;
+         grid-column: 1/3;
+         max-width: 100%;
+       }
+
+       .content-2{
+        grid-row: 2/3;
+        grid-column: 1/3;
+        max-width: 100%;
+       }
+    }
+    
+
+   }
+
+}
+
+@media screen and (max-width: 768px) {
+
+    body .background-section{
+       height:20rem;
+
+       .image-container {
+           margin: 9rem auto 4rem auto;
+         
+        h2{
+          font-size: 1.5rem;
+        }
+       
+       }
+    
+    }
+
+    body .news-intro{
+       width: 95%;
+       margin: 1rem auto 5rem auto;
+
+       .news {
+        
+        span{
+          font-size: 1rem;
+        }
+
+        h1{
+          text-align: left;
+        }
+       }
+
+      .news-image-container img{
+         max-width: 90%;
+       }
+
+    }
+
+    body .news-detail{
+      margin: 5rem 0;
+
+      .news-list{
+         width: 95%;
+        //  margin: 0 1rem;
+         max-width: unset;
+
+         .contactContainer{
+          width: 100%;
+         }
+      }
+    }
+
+
+    body .what-can-help .step-container {
+      width: 100%;
+
+      .stepItem{
+        width: 90%;
+      }
+    }
+
+    body .advertisement h1{
+      font-size: 1.5rem;
+    }
+
+}
