--- a/css/contact.css
+++ b/css/contact.css
@@ -196,3 +196,85 @@ body {
   align-items: center;
   max-height: 5rem;
 }
+
+@media screen and (max-width: 995px) {
+  body .contactSection .contactsContainer {
+    width: 90%;
+  }
+  body .contactSection .contactsContainer .contact {
+    margin: 8rem 0;
+  }
+  body .contactSection .contactsContainer .contact iframe {
+    width: 75%;
+    height: 450px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  body .contact-image-section {
+    height: 20rem;
+    justify-content: center;
+    align-items: center;
+  }
+  body .contact-image-section::before {
+    height: 48%;
+  }
+  body .contact-image-section .contact-image-container {
+    margin: 4rem 0 0 0;
+  }
+  body .contact-image-section .contact-image-container h2 {
+    font-size: 1.5rem;
+  }
+  body .contactSection .contactsContainer {
+    width: 95%;
+    margin: 5rem auto;
+  }
+  body .contactSection .contactsContainer .contact {
+    margin: 4rem 0;
+  }
+  body .contactSection .contactsContainer .contact .contactType {
+    font-size: 2rem;
+  }
+  body .contactSection .contactsContainer .contact .contactType::after {
+    top: 3rem;
+  }
+  body .contactSection .contactsContainer .contact .address {
+    font-size: 1.2rem;
+  }
+  body .contactSection .contactsContainer .contact iframe {
+    width: 95%;
+    min-height: 250px;
+    height: auto;
+  }
+  body .contactSection .contactsContainer .contact .contact-table {
+    margin-top: unset;
+    margin: 2rem auto;
+  }
+  body .contactSection .contactsContainer .contact .contact-table .tableSorter {
+    min-height: 0;
+    grid-template-rows: 1fr 1fr;
+  }
+  body .contactSection .contactsContainer .contact .contact-table .tableSorter .table-body {
+    padding: 1rem;
+  }
+  body .contactSection .contactsContainer .contact .contact-table .tableSorter .spanStyle {
+    background-color: var(--secondary-color);
+    color: white;
+    font-size: 1rem;
+  }
+  body .contactSection .contactsContainer .contact .contact-table .tableSorter .spanStyle-body {
+    font-size: 1rem;
+  }
+  body .contactSection .contactsContainer .contact .contact-table .tableSorter .grid-item-2 {
+    grid-column: 1;
+    grid-row: 2;
+    border-top: 0.5px solid rgba(255, 255, 255, 0.156);
+  }
+  body .contactSection .contactsContainer .contact .contact-table .tableSorter .grid-item-3 {
+    grid-column: 2;
+    grid-row: 1;
+  }
+  body .contactSection .contactsContainer .contact .contact-table .tableSorter .grid-item-4 {
+    border-top: 0.5px solid rgba(255, 255, 255, 0.156);
+  }
+}
