--- a/css/contact.scss
+++ b/css/contact.scss
@@ -236,6 +236,113 @@ body {
   }
 }
 
+@media screen and (max-width: 995px) {
+  body .contactSection .contactsContainer{
+    width: 90%;
+
+    .contact {
+      margin: 8rem 0;
+      iframe{
+        width: 75%;
+        height: 450px;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 768px) {
+  body .contact-image-section{
+    height: 20rem;
+    justify-content: center;
+    align-items: center;
+
+    &::before{
+    //  top: 0;
+     height: 48%;
+    }
+
+    .contact-image-container{
+       margin: 4rem 0 0 0;
+
+       h2{
+         font-size: 1.5rem;
+       }
+    }
+  }
+
+  body .contactSection .contactsContainer {
+     width: 95%;
+     margin: 5rem auto;
+
+    .contact {
+       margin:4rem 0;
+
+       .contactType{
+        font-size: 2rem;
+
+        &::after{
+          top: 3rem;
+        }
+       }
+
+       .address{
+        font-size: 1.2rem;
+       }
+
+       iframe{
+        width: 95%;
+        min-height: 250px;
+        height: auto;
+       }
+       
+      .contact-table {
+        margin-top: unset;
+        margin: 2rem auto;
+  
+      .tableSorter{
+        min-height: 0;
+        grid-template-rows: 1fr 1fr;
+    
+        .table-body{
+          padding: 1rem;
+        }
+    
+        .spanStyle{
+          background-color: var(--secondary-color);
+          color: white;
+          font-size: 1rem;
+        }
+    
+        .spanStyle-body{
+          font-size: 1rem;
+        }
+  
+  
+        .grid-item-2{
+          grid-column: 1;
+          grid-row: 2;
+          border-top:0.5px solid rgba(255, 255, 255, 0.156);
+        }
+  
+        .grid-item-3{
+           grid-column: 2;
+           grid-row: 1;
+         
+  
+        }
+  
+        .grid-item-4{
+          border-top:0.5px solid rgba(255, 255, 255, 0.156);
+        }
+  
+       }   
+     }
+
+    }
+
+  }
+  
 
 
+}
 
