--- a/css/service.css
+++ b/css/service.css
@@ -339,3 +339,109 @@ body {
   line-height: 1.7rem;
   font-size: 1.3rem;
 }
+
+@media screen and (max-width: 994px) {
+  body .service-List {
+    background-size: auto;
+    background-position: 25% 75%;
+  }
+  body .service-List .findButton {
+    left: 35%;
+  }
+  body .service-List .step-container .stepItem-list {
+    flex-direction: column;
+  }
+  body .service-red-description .step-container {
+    margin: 3.5rem auto 5rem auto;
+  }
+  body .service-red-description .step-container .stepItem-list {
+    flex-direction: column;
+  }
+  body .service-red-description .step-container .stepItem {
+    justify-content: center;
+    margin: 4rem;
+  }
+  body .service-red-description .step-container .stepItem img {
+    width: 150px;
+  }
+  body .services-intro {
+    width: 90%;
+  }
+  body .services-intro .advertisement-content {
+    grid-template-rows: 1fr 1fr;
+    column-gap: 0;
+  }
+  body .services-intro .advertisement-content .content-1 {
+    grid-row: 1/2;
+    grid-column: 1/3;
+    max-width: 100%;
+  }
+  body .services-intro .advertisement-content .content-2 {
+    grid-row: 2/3;
+    grid-column: 1/3;
+    max-width: 100%;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  body .service-image-section {
+    height: 20rem;
+    margin-top: 11rem;
+    position: relative;
+    top: 2rem;
+  }
+  body .service-image-section::before {
+    height: 20rem;
+  }
+  body .service-red-description .step-container {
+    width: 100%;
+  }
+  body .service-red-description .step-container .stepItem {
+    width: 90%;
+  }
+  body .AboutService {
+    width: 100%;
+    margin: 3rem auto 4rem auto;
+  }
+  body .AboutService h1 {
+    font-size: 1.8rem;
+  }
+  body .AboutService span {
+    font-size: 1rem;
+    line-height: 1.5rem;
+  }
+  body .services-intro h1 {
+    font-size: 1.5rem;
+  }
+  body .service-List .findButton {
+    left: 12%;
+  }
+  body .service-List .step-container {
+    width: 100%;
+  }
+  body .service-List .step-container .stepItem {
+    margin: 3rem 0.5rem;
+  }
+  body .service-List .step-container .stepItem i {
+    font-size: 8rem;
+  }
+  body .service-List .step-container .stepItem .item-description {
+    margin: 0.5rem 0;
+  }
+  body .service-image-section h1 {
+    display: none;
+  }
+  body .service-image-section .Button {
+    width: 15rem;
+    height: unset;
+    padding: 0.8rem 1.5rem;
+    font-size: 1.5rem;
+  }
+  body .service-image-section h2 {
+    font-size: 1.3rem;
+  }
+  body .service-image-section p {
+    width: 90%;
+    font-size: 1rem;
+  }
+}
