--- a/css/service.scss
+++ b/css/service.scss
@@ -372,3 +372,155 @@ body {
 
   }
 }
+
+
+@media screen and (max-width: 994px){
+  body .service-List {
+    background-size: auto;
+    background-position: 25% 75%;
+
+    .findButton{
+      left: 35%;
+    }
+    
+    .step-container .stepItem-list{
+      flex-direction: column;
+    }
+   }
+
+  
+   body .service-red-description .step-container {
+    margin: 3.5rem auto 5rem auto;
+   .stepItem-list{
+     flex-direction: column;
+   }
+
+   .stepItem {
+       justify-content: center;
+       margin: 4rem;
+
+     img{
+       width: 150px;
+     }
+
+   }
+ }
+
+ body .services-intro {
+  width: 90%;
+ .advertisement-content{
+   grid-template-rows: 1fr 1fr;
+   column-gap: 0;
+    
+    .content-1{
+      grid-row: 1/2;
+      grid-column: 1/3;
+      max-width: 100%;
+    }
+
+    .content-2{
+     grid-row: 2/3;
+     grid-column: 1/3;
+     max-width: 100%;
+    }
+ }
+ 
+
+}
+
+
+}
+
+
+@media screen and (max-width: 768px){
+
+  body .service-image-section{
+    height: 20rem;
+    margin-top: 11rem;
+    position: relative;
+    top: 2rem;
+
+    &::before{
+      height: 20rem;
+      // padding-bottom: 4rem;
+    }
+  }
+
+  body .service-red-description .step-container {
+    width: 100%;
+
+    .stepItem{
+      width: 90%;
+    }
+  }
+
+  body .AboutService{
+    width: 100%;
+    margin: 3rem auto 4rem auto;
+
+
+    h1{
+      font-size: 1.8rem;
+    }
+
+    span{
+      font-size: 1rem;
+      line-height: 1.5rem;
+    }
+  }
+
+  body .services-intro h1{
+    font-size: 1.5rem;
+  }
+
+  body .service-List {
+    .findButton{
+      left: 12%;
+    }
+
+    .step-container{
+       width: 100%;
+    
+        .stepItem {
+         margin: 3rem 0.5rem;
+        
+          i{
+            font-size: 8rem;
+          }
+    
+          .item-description{
+            margin: 0.5rem 0;
+          }
+        }
+
+    }
+ 
+  }
+
+  body .service-image-section{
+
+    h1{
+      display: none;
+    }
+
+    .Button{
+      width: 15rem;
+      height: unset;
+      padding: 0.8rem 1.5rem;
+      font-size: 1.5rem;
+    }
+    
+    h2{
+      font-size: 1.3rem;
+    }
+
+    p{
+      width: 90%;  
+      font-size: 1rem;
+    }
+  }
+
+
+
+
+}
