add iphone and ipad responsive design

--- a/css/about.scss
+++ b/css/about.scss
@@ -113,7 +113,7 @@ body {
 }
 
 .pictureLink{
-  background-image: url(https://www.essentialit.com.au/wp-content/uploads/2019/05/shutterstock_141093727_hero_1_1919x559_acf_cropped.jpg);
+  background-image: url(https://awardmortgage.com.au/wp-content/uploads/2019/11/20191120124335.jpg);
 }
 
 .Aboutus {
